add get post by post_id
