# src/routes/postRoutes/index.js
@@ -9,9 +9,10 @@ routes.get('/post', postController.getPost)
 routes.get('/post/myPosts', authenticationn.verifyToken, postController.getMyPosts)
 
 routes.get('/post/postInfluencer', postController.getPostInfluencer)
-routes.get('/post/:user_id', postController.getPostByUserId)
+routes.get('/post/user/:user_id', postController.getPostByUserId)
 
 routes.delete('/post/:post_id', postController.deletePost)
+routes.get('/post/:post_id', postController.getPostById)
 
 
 
